--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "eval:fixture": "tsx scripts/run-fixture.ts"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
     "next": "16.0.1",
     "openai": "^4.104.0",
+    "@prisma/client": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -23,7 +25,12 @@
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "prisma": "^6.19.0",
+    "tsx": "^4.19.2",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
