--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "import:pexels": "tsx scripts/import-pexels.ts"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
     "openai": "^4.104.0",
-    "@prisma/client": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -28,9 +28,10 @@
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "lightningcss": "^1.30.2",
     "prisma": "^6.19.0",
-    "tsx": "^4.19.2",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   },
   "prisma": {
